fix: BasicLayout sider overflow

--- a/src/components/BasicLayout/BasicLayout-styles.less
+++ b/src/components/BasicLayout/BasicLayout-styles.less
@@ -2,7 +2,6 @@
 	height: 100%;
 
 	&__sider.ant-layout-sider {
-		height: 100%;
 		background: none;
 	}
 
